# PythonProjectK3

./: .gitignore  README.md  main.py  pyproject.toml
src/: API_vacancies.py  DBManager_vacancies.py  config.py  create_database.py
